--- a/index.html
+++ b/index.html
@@ -44,12 +44,7 @@
   <meta property="og:site_name" content="Sainath Santa Ram | Software Developer" />
   <meta property="article:publisher" content="https://zszazi.github.io/" />
   <meta property="og:image" content="https://zszazi.github.io/examples/preview.JPG" />
-  <!-- Twitter -->
-  <meta name="twitter:card" content="summary" />
-  <meta name="twitter:site" content="@varad_bhogayata" />
-  <meta name="twitter:title" content="Coder | Technofreak | Explorer | Minimalist | Humane" />
-  <meta name="twitter:description" content="Software Developer" />
-  <meta name="twitter:url" content="https://twitter.com/varad_bhogayata" />
+
   <meta name="author" content="Sainath Santa Ram" />
   <meta name="description"
     content="Software Developer with a passion for backend development and artificial intelligence." />
@@ -148,11 +143,11 @@
         4. mdi-file-attachment
         5. mdi-file-folder-shared
         -->
-        <!-- <a aria-label="Open Varad's resume in a new tab" href="#resume" target="_blank"
+        <!-- <a aria-label="Open Sainath's resume in a new tab" href="#resume" target="_blank"
           onclick="window.open('https://drive.google.com/file/d/1vYi-bMyIsZPve0x_clxY8xsDtiHiOMd3/view?usp=sharing')"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a> -->
-        <a aria-label="Open Varad's resume in a new tab"
-          href="https://zszazi.github.io/assets/resume/Varad_Bhogayata_Resume.pdf" target="_blank"
+        <a aria-label="Open Sainath's resume in a new tab"
+          href="https://zszazi.github.io/assets/resume/Sainath_Santa_Ram_Resume.pdf" target="_blank"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>
       </li>
     </ul>
@@ -163,8 +158,8 @@
     <a aria-label="Toggle visibility of the mobile navbar" href="#" data-activates="slide-out"
       class="button-collapse"><i class="mdi-navigation-menu"></i></a>
     <div class="name-title">
-      <a id="name" aria-label="Navigate to the beginning of the page" href="#" class="teal-text">Varad
-        Bhogayata</a><span class="black-text">Software Developer</span>
+      <a id="name" aria-label="Navigate to the beginning of the page" href="#" class="teal-text">Sainath
+        Santa Ram</a><span class="black-text">Software Developer</span>
     </div>
   </nav>
 
@@ -198,7 +193,7 @@
             class="mdi-content-mail small"></i><span>Contact</span></a>
       </li>
       <li class="bold">
-        <a aria-label="Open Varad's Resume in a new tab"
+        <a aria-label="Open Sainath's Resume in a new tab"
           href="https://drive.google.com/file/d/1B6MZ1z0-7NsefC3Lm_q-uhib28MTqpE9/view?usp=sharing" target="_blank"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>
       </li>
@@ -231,20 +226,6 @@
                   <i class="fa fa-github"></i>
                 </button>
               </a>
-
-              <!-- <a href="https://angel.co/u/varad_bhogayata" target="_blank">
-                <button class="icon-btn angellist">
-                  <i class="fa fa-angellist"></i>
-                </button>
-              </a> -->
-
-              <!-- <a href="http://linkedin.com/in/zszazi" target="_blank">
-                  <span class="fa-stack fa-lg">
-                    <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
-
-                  </span>
-              </a> -->
             </div>
             <div class='buttons'>
               <a href="#about" class="readme">Read More</a>
@@ -266,11 +247,12 @@
           </h2>
         </blockquote> -->
         <p>
-          I am a Computer Science Grad Student at Arizona State University. I enjoy problem-solving and coding. Always
+          I am an Information Science Master's Student at The University of Texas at Austin. I enjoy problem-solving and
+          coding. Always
           strive to bring 100% to the work I do.
 
           I have worked on technologies like Python, Django, Flask, MySQL, PostgreSQL, MongoDB, HTML5, CSS, Java, C++
-          during my bachelor's. I have 19 months of professional work experience which helped me strengthen my
+          during my bachelor's. I have 3 years of professional work experience which helped me strengthen my
           experience in Python, Flask, and Django.
 
           I am passionate about developing complex applications that solve real-world problems impacting millions of
@@ -945,11 +927,11 @@
               <div class="card-content">
                 <p>
                   <span class="card-title"><a href="https://www.asu.edu/" target="_blank"
-                      class="teal-text hoverline">Arizona State University</a></span>
+                      class="teal-text hoverline">The University of Texas at Austin</a></span>
                 </p>
-                <p class="brown-text">Tempe, USA</p>
+                <p class="brown-text">Austin, Texas, USA</p>
                 <p>
-                  <b>Degree: </b>Master of Science in Computer Science
+                  <b>Degree: </b>Master of Science in Information Science
                   <br>
                   <b>CGPA: </b>4.0/4.0
                 </p>
@@ -958,9 +940,8 @@
                   <p>
                     <b>Relevant Courseworks:</b>
                   <ul>
-                    <li>Distributed Database Systems</li>
-                    <li>Cloud Computing</li>
-                    <li>Foundations of Algorithms</li>
+                    <li>Deep Learning and Multi Modal Systems</li>
+                    <li>Designing Physical Information Systems</li>
                   </ul>
                   </p>
 
@@ -976,14 +957,14 @@
                 <p>
                   <span class="card-title"><a
                       href="https://ahduni.edu.in/academics/schools-centres/school-of-engineering-and-applied-science/"
-                      target="_blank" class="teal-text hoverline">School of Engineering and Applied Science, Ahmedabad
-                      University</a></span>
+                      target="_blank" class="teal-text hoverline">SRM Institute of Science and Technology,
+                      Chennai</a></span>
                 </p>
-                <p class="brown-text">Ahmedabad, India</p>
+                <p class="brown-text">Chennai, India</p>
                 <p>
-                  <b>Degree: </b>Bachelor of Technology in Information and Communication Technology
+                  <b>Degree: </b>Bachelor of Technology in Computer Science
                   <br>
-                  <b>CGPA: </b>3.13/4.33
+                  <b>CGPA: </b>9.75/10.0
                 </p>
 
                 <ul>
@@ -994,7 +975,6 @@
                     <li>Database Management Systems</li>
                     <li>Operating Systems</li>
                     <li>Machine Learning</li>
-                    <li>Computer Vision</li>
                   </ul>
                   </p>
 
@@ -1011,29 +991,29 @@
       <h3 class="page-title white-text teal">Contact</h3>
       <div class="container">
         <p>
-          <a aria-label="Call Varad" data-position="top" data-tooltip="Call Varad"
+          <a aria-label="Call Sainath" data-position="top" data-tooltip="Call Sainath"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-phone"></i><a
-              aria-label="Call Varad">+14805722456</a></a>
+              aria-label="Call Sainath">+17376150746</a></a>
         </p>
         <p>
-          <a aria-label="Email Varad" href="mailto:vbhogayata@gmail.com" target="_blank" data-position="top"
-            data-tooltip="Email Varad" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-envelope"></i><a aria-label="Email Varad" href="mailto:vbhogayata@gmail.com"
-              class="hoverline">vbhogayata@gmail.com</a></a>
+          <a aria-label="Email Sainath" href="mailto:sainath@utexas.edu" target="_blank" data-position="top"
+            data-tooltip="Email Sainath" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
+              class="fa fa-envelope"></i><a aria-label="Email Sainath" href="mailto:sainath@utexas.edu"
+              class="hoverline">sainath@utexas.edu</a></a>
         </p>
         <p>
-          <a aria-label="View Varad on GitHub" href="http://github.com/zszazi" target="_blank" data-position="top"
-            data-tooltip="View Varad on GitHub"
+          <a aria-label="View Sainath on GitHub" href="http://github.com/zszazi" target="_blank" data-position="top"
+            data-tooltip="View Sainath on GitHub"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-github"></i><a
-              aria-label="Varad on Github" href="http://github.com/zszazi" class="hoverline"
+              aria-label="Sainath on Github" href="http://github.com/zszazi" class="hoverline"
               target="_blank">github.com/zszazi</a></a>
         </p>
         <p>
-          <a aria-label="View Varad on LinkedIn" href="http://linkedin.com/in/zszazi" target="_blank"
-            data-position="top" data-tooltip="View Varad on LinkedIn"
+          <a aria-label="View Sainath on LinkedIn" href="http://linkedin.com/in/sainath98" target="_blank"
+            data-position="top" data-tooltip="View Sainath on LinkedIn"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-linkedin"></i><a aria-label="Varad on LinkedIn" href="http://linkedin.com/in/zszazi"
-              class="hoverline" target="_blank">linkedin.com/in/zszazi</a></a>
+              class="fa fa-linkedin"></i><a aria-label="Sainath on LinkedIn" href="http://linkedin.com/in/sainath98"
+              class="hoverline" target="_blank">linkedin.com/in/sainath98</a></a>
         </p>
       </div>
     </section>
