updated with linkedin

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                 challenging real-world problems.</h5>
             </div>
             <div class="social">
-              <a href="http://linkedin.com/in/zszazi" target="_blank">
+              <a href="http://linkedin.com/in/sainath98" target="_blank">
                 <button class="icon-btn linkedin">
                   <i class="fa fa-linkedin"></i>
                 </button>
