--- a/index.html
+++ b/index.html
@@ -302,37 +302,43 @@
           <div class="card-content">
             <div class="row">
               <div class="col s12 m2">
-                <a href="https://www.zhiffy.com/" target="_blank"><img alt="Zhiffy logo"
-                    src="/assets/img/exp-zhiffy-logo-1.webp" class="responsive-img center-block" /></a>
+                <a href="https://www.ffy.com/" target="_blank"><img alt="Cisco logo" src="assets/img/cisco.png"
+                    class="responsive-img center-block" /></a>
               </div>
               <!-- <div class="col s12 m10"> -->
               <div class="col s12 m10">
                 <p>
-                  <span class="card-title"><a href="https://www.zhiffy.com/" target="_blank"
-                      class="teal-text hoverline">Zhiffy</a></span>
+                  <span class="card-title"><a href="https://www.cisco.com/" target="_blank"
+                      class="teal-text hoverline">Cisco Systems</a></span>
                 </p>
               </div>
             </div>
             <div class="role brown-text text-darken-2">Software Engineer</div>
             <ul>
-              <li>
-                Developed and managed the backend of an e-commerce platform using Flask, MongoDB, and AWS.
+              <li> <b>Tech Stack </b> Kubernetes, DevOps, Python, Helm, Jenkins, Docker, AWS, DevSecOps, Groovy, React
               </li>
-              <li>
-                Worked on three web applications targeting customers, selling vendors, and admin users; built 50+
-                RESTful APIs with functionalities
-                such as login/sign up, view a product, add a product to cart, checkout the order, etc.
+              <li>Managed production releases, hotfixes, and Kubernetes/Istio upgrades for Cisco IoT product and
+                supported applications while handling day-to-day operational activities for Cloud Native based
+                Microservices</li>
+              <li>Achieved a 50% reduction in operational costs of AWS EKS Kubernetes Cluster by executing capacity
+                planning exercises and implementing Horizontal Pod Autoscalers (HPAs)</li>
+              <li>Executed a seamless migration of 1 million project-critical Redis keys from a standalone to a
+                clustered ElastiCache setup with zero downtime and no data loss using Python scripts</li>
+              <li>Utilized kubernetes cron job to achieve 20% reduction in database size by removing stale entries</li>
+              <li>Implemented sensor data encoding and decoding APIs for LoRaWAN sensors complemented by a user-friendly
+                UI</li>
+              <li>Took ownership of end-to-end CICD, helm charts, and monitoring dashboards for Satellite Comm Project
               </li>
-              <li>Improved the response time by 20% by refactoring the codebase and changing database design and
-                queries.</li>
-              <li>Added a bulk upload feature which reduced the manual work of adding products into a database.</li>
-              <li>
-                <b>Tools:</b> Python, Flask, MongoDB
-              </li>
+              <li>Developed React dashboard integrating Jenkins, Github, and Sonar data for repo stats, versions, and
+                coverage</li>
+              <li>Wrote a reusable Groovy library to streamline CICD processes and parallelized build steps using locks,
+                resulting in a 40% reduction in build pipeline execution time</li>
+              <li>Enhanced the security of the Production Build Environment through DevSecOps practices, effectively
+                addressing 28 critical CVEs and formalized an audit process to assess readiness every quarter</li>
             </ul>
           </div>
           <div class="card-action">
-            <span>July 2020 - Nov 2020 | Hyderabad, India</span>
+            <span>Aug 2020 - Aug 2023 | Bangalore, India</span>
           </div>
         </div>
 
@@ -341,123 +347,32 @@
           <div class="card-content">
             <div class="row">
               <div class="col s12 m2">
-                <a href="https://www.meditab.com" target="_blank"><img alt="Meditab logo"
-                    src="/assets/img/exp-meditab-logo-500x500.jpg" class="responsive-img center-block" /></a>
+                <a href="https://www.cisco.com" target="_blank"><img alt="Cisco logo" src="assets/img/cisco.png"
+                    class="responsive-img center-block" /></a>
               </div>
               <!-- <div class="col s12 m10"> -->
               <div class="col s12 m10">
                 <p>
-                  <span class="card-title"><a href="http://meditab.com" target="_blank"
-                      class="teal-text hoverline">Meditab</a></span>
+                  <span class="card-title"><a href="http://Cisco.com" target="_blank" class="teal-text hoverline">Cisco
+                      Systems</a></span>
                 </p>
               </div>
             </div>
-            <div class="role brown-text text-darken-2">Programmer Analyst</div>
+            <div class="role brown-text text-darken-2">Software Engineering Intern</div>
             <ul>
-              <li>
-                Customized a tree-based optimization algorithm that separates drugs into distinct groups to maximize the
-                concurrent execution of drug
-                dispenser robots; improved an optimization algorithm that reduced the cycle-time of the automation
-                process by 25%.
-              </li>
-              <li>
-                Devised a customized recursion algorithm to extend the functionality of the current environment to a
-                multi-robot and multi-system
-                environment
-              </li>
-              <li>
-                Built a modular video analytics app using Flask, OpenCV that tracks the location of each human in a
-                multi-camera environment;
-                utilized perspective transformation, object detection, and object tracking to find the location of a
-                human.
-              </li>
-              <li>Increased the speed of the video analytics app by 20% by using a customized YOLOv3 algorithm to
-                perform object detection and
-                DeepSORT algorithm for multi-object tracking.</li>
-              <li>
-                <b>Tools:</b> Python, Flask, OpenCV, Keras, Tensorflow, PyTorch
-              </li>
+              <li><b>Tech Stack </b>Python, Neo4j Graph Database, Gradle Plugin, Spring Batch</li>
+              <li>Created a test case impact analysis system, optimizing release testing efficiency by focusing on
+                impacted test cases</li>
+              <li>Contributed to the development of a knowledge graph for mapping test cases to source code, resulting
+                in a significant reduction in time-to-release, from weeks to days, by selectively running only affected
+                test cases</li>
             </ul>
           </div>
           <div class="card-action">
-            <span>Dec 2018 - July 2019 | Ahmedabad, India</span>
+            <span>Jan 2020 - Jun 2020 | Ahmedabad, India</span>
           </div>
         </div>
 
-        <!-- Experience 2 -->
-        <div class="card">
-          <div class="card-content">
-            <div class="row">
-              <div class="col s12 m2">
-                <img alt="Mtag logo" src="/assets/img/exp-mtag-logo-250x250.jpg" class="responsive-img center-block" />
-
-              </div>
-
-              <!-- <div class="col s12 m10"> -->
-              <div class="col s12 m10">
-                <p>
-                  <span class="card-title"><a href="#experience" class="teal-text hoverline">Mtag
-                      Innovations</a></span>
-                </p>
-              </div>
-            </div>
-            <div class="role brown-text text-darken-2">Software Developer</div>
-            <ul>
-              <li>
-                Programmed a cloud-based web app using Flask and JavaScript aimed at storing, visualizing, and tracking
-                temperature and humidity
-                of each drug container to estimate the degradation of the drug.
-              </li>
-              <li>
-                Created an alert system to send notifications and emails when the parameters exceed the threshold.
-              </li>
-              <li>
-                <b>Tools:</b> Python, Flask, JavaScript
-              </li>
-            </ul>
-          </div>
-          <div class="card-action">
-            <span>July 2018 - Nov 2018 | Ahmedabad, India</span>
-          </div>
-        </div>
-
-        <!-- Experience 3 -->
-        <div class="card">
-          <div class="card-content">
-            <div class="row">
-              <div class="col s12 m2">
-                <a href="https://www.cignex.com" target="_blank"><img alt="Cignex logo"
-                    src="/assets/img/exp-cignex-logo.png" class="responsive-img center-block" /></a>
-              </div>
-              <div class="col s12 m10">
-                <p>
-                  <span class="card-title"><a href="https://www.cignex.com" target="_blank"
-                      class="teal-text hoverline">CIGNEX
-                      Datamatics </a></span>
-                </p>
-              </div>
-            </div>
-            <div class="role brown-text text-darken-2">Project Trainee</div>
-            <ul>
-              <li>
-                Designed a library management system for a local library, where we undertook activities like requirement
-                elicitation, preparing Data Flow
-                and Entity-Relationship diagrams.
-              </li>
-              <li>
-                Delivered a solution for a POC involving Automatic Financial Document Classifier using Natural Language
-                Processing and Support Vector
-                Machines with 96% accuracy on the company’s data.
-              </li>
-              <li>
-                <b>Tools:</b> Python, Scikit-learn, NLTK
-              </li>
-            </ul>
-          </div>
-          <div class="card-action">
-            <span>June 2017 - July 2017 | Ahmedabad, India</span>
-          </div>
-        </div>
 
       </div>
     </section>
@@ -1023,7 +938,7 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing', {
-      strings: ["Pythonist", "Developer", "Fast Learner"],
+      strings: ["Kubernetes Engineer", "Cloud Engineer", "Python Developer", "Go Developer"],
       loop: true,
       typeSpeed: 80,
       backSpeed: 40
