update work exp

--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
             </ul>
           </div>
           <div class="card-action">
-            <span>Jan 2020 - Jun 2020 | Ahmedabad, India</span>
+            <span>Jan 2020 - Jun 2020 | Bangalore, India</span>
           </div>
         </div>
 
@@ -512,11 +512,11 @@
               <div class="card-reveal">
                 <!-- TODO: change this -- only close button -->
     <!-- <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span> -->
-    <span class="card-title teal-text"><small>Accomplishments</small><i class="mdi-navigation-close right"></i></span>
+    <!-- <span class="card-title teal-text"><small>Accomplishments</small><i class="mdi-navigation-close right"></i></span>
     <ul>
       <li><b>Tools:</b> HTML, CSS, Bootstrap, Flask, SQLAlchemy, Postgresql, Python</li>
       <li>Users can view posts and contact the admin via Contact Page.</li>
-      <li>Admin can Add, Delete, Update posts.</li>
+      <li>Admin can Add, Delete, Update posts.</li> -->
 
 
     </ul>
